fix euclid2 svg wrapping "carriage return"

--- a/src/base/floor/impl/Euclid2/style.m.css
+++ b/src/base/floor/impl/Euclid2/style.m.css
@@ -22,5 +22,5 @@
 }
 
 .player {
-	transition: transform 0.05s linear;
+	/* transition: transform 0.05s linear; */
 }
